--- a/python/assignments/Fizz_Buzz_Numbers.ipynb
+++ b/python/assignments/Fizz_Buzz_Numbers.ipynb
@@ -23,22 +23,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NG7ajGfwoBl3",
-        "outputId": "aefc04fa-a61e-466f-dca5-2485d4774b4e"
+        "outputId": "a2bc3c3b-568d-49d4-8ee6-fc1c793f4888"
       },
       "source": [
-        "n = list(range(1,101))\n",
+        "n = range(1, 101)\n",
         "\n",
         "for i in n:\n",
-        "  if i % 3 == 0 and not i % 15 == 0:\n",
-        "    print(\"Fizz\")\n",
-        "  elif i % 5 == 0 and not i % 15 == 0:\n",
-        "    print(\"Buzz\")\n",
-        "  elif i % 15 == 0:\n",
+        "  if i % 15 == 0:\n",
         "    print(\"FizzBuzz\")\n",
+        "  elif i % 3 == 0 :\n",
+        "    print(\"Fizz\")\n",
+        "  elif i % 5 == 0 :\n",
+        "    print(\"Buzz\")\n",
         "  else:\n",
         "    print(i)    "
       ],
-      "execution_count": 11,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
